@@ -37,6 +37,7 @@ version 0.84.05
 	Android: Better error message if root access is missing.
 	GUI ISO table simplification
 	GUI Preview image bugfix
+	Filename extension bugfixes
 
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
